// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> Global render should render default 1`] = `
<Button>
  <button
    className="button primary medium light"
  />
</Button>
`;

exports[`<Button> Style properties should render danger nature 1`] = `
<Button
  nature="danger"
>
  <button
    className="button danger medium light"
  />
</Button>
`;

exports[`<Button> Style properties should render danger nature and small size 1`] = `
<Button
  nature="danger"
  size="small"
>
  <button
    className="button danger small light"
  />
</Button>
`;

exports[`<Button> Style properties should render large size 1`] = `
<Button
  size="large"
>
  <button
    className="button primary large light"
  />
</Button>
`;

exports[`<Button> Style properties should render medium size 1`] = `
<Button
  size="medium"
>
  <button
    className="button primary medium light"
  />
</Button>
`;

exports[`<Button> Style properties should render primary nature 1`] = `
<Button
  nature="primary"
>
  <button
    className="button primary medium light"
  />
</Button>
`;

exports[`<Button> Style properties should render secondary nature 1`] = `
<Button
  nature="secondary"
>
  <button
    className="button secondary medium light"
  />
</Button>
`;

exports[`<Button> Style properties should render small size 1`] = `
<Button
  size="small"
>
  <button
    className="button primary small light"
  />
</Button>
`;
